@@ -28,14 +28,12 @@
             };
 
             wagtailConfig.STRINGS = {
-                EDIT: "{% trans 'Edit' %}",
                 DELETE: "{% trans 'Delete' %}",
                 PAGE: "{% trans 'Page' %}",
                 PAGES: "{% trans 'Pages' %}",
                 LOADING: "{% trans 'Loading…' %}",
                 NO_RESULTS: "{% trans 'No results' %}",
                 SERVER_ERROR: "{% trans 'Server Error' %}",
-                SEE_CHILDREN: "{% trans 'See children' %}",
                 SEE_ALL: "{% trans 'See all' %}",
                 CLOSE_EXPLORER: "{% trans 'Close explorer' %}",
                 ALT_TEXT: "{% trans 'Alt text' %}",
@@ -52,6 +50,8 @@
                 BROKEN_LINK: "{% trans 'Broken link' %}",
                 MISSING_DOCUMENT: "{% trans 'Missing document' %}",
                 CLOSE: "{% trans 'Close' %}",
+                EDIT_PAGE: "{% trans 'Edit \'{title}\'' %}",
+                VIEW_CHILD_PAGES_OF_PAGE: "{% trans 'View child pages of \'{title}\'' %}",
 
                 MONTHS: [
                     "{% trans 'January' %}",
